About openGL rendering of smoke modifier #36441

Closed
opened 2013-08-12 02:15:50 +02:00 by perfection cat · 16 comments

%%%--- Operating System, Graphics card ---
Windows XP/SP3 32bits
Nvidia Geforce 9500GT

- Blender version with error, and version that worked ---

version 2.68a r59028

- Short description of error ---

When I use internal renderer of blender, work is different.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

When I use internal renderer of blender, work is different.
Is different; when work.
I make rendering in F12.
Naturally smoke is not drawn.
I make rendering in openGL.
smoke should be drawn, but an initial frame seemed to be drawn.
I make rendering again in openGL.
smoke is drawn definitely.

When I use Cycles renderer, such a thing does not occur.
%%%

%%%--- Operating System, Graphics card --- Windows XP/SP3 32bits Nvidia Geforce 9500GT - Blender version with error, and version that worked --- version 2.68a r59028 - Short description of error --- When I use internal renderer of blender, work is different. - Steps for others to reproduce the error (preferably based on attached .blend file) --- When I use internal renderer of blender, work is different. Is different; when work. I make rendering in F12. Naturally smoke is not drawn. I make rendering in openGL. smoke should be drawn, but an initial frame seemed to be drawn. I make rendering again in openGL. smoke is drawn definitely. When I use Cycles renderer, such a thing does not occur. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%I attached a file%%%

%%%I attached a file%%%

%%%OpenGL and BI rendering work here; smoke is not supported in Cycles yet. If you're referring to why you can't see the smoke when rendering, it's because you didn't have a material set up to visualize the volume.

Follow the directions here to get a basic smoke material and manipulate to get the desired effect: http://wiki.blender.org/index.php/Doc:2.6/Manual/Physics/Smoke/Material

r59074 x64 (SVN trunk) on Win7%%%

%%%OpenGL and BI rendering work here; smoke is not supported in Cycles yet. If you're referring to why you can't see the smoke when rendering, it's because you didn't have a material set up to visualize the volume. Follow the directions here to get a basic smoke material and manipulate to get the desired effect: http://wiki.blender.org/index.php/Doc:2.6/Manual/Physics/Smoke/Material r59074 x64 (SVN trunk) on Win7%%%
Author

%%%It is not such a thing to point out here.
I can watch smoke by using smoke modifier.
I point out that a different image is produced when I paint pictures in opengl renderer in the next using internal renderer.%%%

%%%It is not such a thing to point out here. I can watch smoke by using smoke modifier. I point out that a different image is produced when I paint pictures in opengl renderer in the next using internal renderer.%%%
Author

%%%The phenomenon is not caused even if I do a similar thing in the state that chose Cycles renderer with a rendering engine.
It occurs when I carry it out in the state that chose internal renderer with a rendering engine.%%%

%%%The phenomenon is not caused even if I do a similar thing in the state that chose Cycles renderer with a rendering engine. It occurs when I carry it out in the state that chose internal renderer with a rendering engine.%%%
Author

%%%Because I took an animation, I attach it.
It is the file of the wmv format.%%%

%%%Because I took an animation, I attach it. It is the file of the wmv format.%%%

%%%I understand what you are saying now.

Using the video as a guide, I have reproduced the error, but my result is slightly different. I can also confirm this in 2.68a and in SVN trunk, but not in previous versions.

  • My steps to reproduce the error:
    Open blend file and bake the smoke simulation to ensure it is cached.
    Render in openGL (it will render as expected).
    Ensure the selected render engine is Blender Render and render. It will render the domain as the cube (expected).
    Immediately render with openGL again. My result was half-opacity smoke over the icosphere. This is the erroneous render.
    Immediately render with openGL again. It will render as expected (identical to the first openGL render).

I am able to reproduce this multiple times without reloading the file. Simply render with Blender Render with F12 again followed by another openGL render. Changing frames between the F12 render and the openGL render does not produce the problem. Following the same steps with Cycles enabled does not reproduce the problem.

I will try to find the commit or time period when this was introduced. %%%

%%%I understand what you are saying now. Using the video as a guide, I have reproduced the error, but my result is slightly different. I can also confirm this in 2.68a and in SVN trunk, but not in previous versions. - My steps to reproduce the error: Open blend file and bake the smoke simulation to ensure it is cached. Render in openGL (it will render as expected). Ensure the selected render engine is Blender Render and render. It will render the domain as the cube (expected). Immediately render with openGL again. My result was half-opacity smoke over the icosphere. This is the erroneous render. Immediately render with openGL again. It will render as expected (identical to the first openGL render). I am able to reproduce this multiple times without reloading the file. Simply render with Blender Render with F12 again followed by another openGL render. Changing frames between the F12 render and the openGL render does not produce the problem. Following the same steps with Cycles enabled does not reproduce the problem. I will try to find the commit or time period when this was introduced. %%%

%%%The commit that introduced this behavior is 57377.

I have been able to reproduce in 57377 and later with both MSVC 2008 and MinGW-w64 build systems.

Win7 x64
GTX 560 Ti 2-GB version%%%

%%%The commit that introduced this behavior is 57377. I have been able to reproduce in 57377 and later with both MSVC 2008 and MinGW-w64 build systems. Win7 x64 GTX 560 Ti 2-GB version%%%

%%%I couldn't redo this problem (OS X, NVidia GT 650M), but maybe I don't understand it well.

When you say render, is that a single frame or an animation render?%%%

%%%I couldn't redo this problem (OS X, NVidia GT 650M), but maybe I don't understand it well. When you say render, is that a single frame or an animation render?%%%

%%%It's a single frame render. %%%

%%%It's a single frame render. %%%
Author

%%%I'm sorry.
There was an old custom called "OBON" in Japan and was absent for these past three days.
There is a thing to get to me just to have understood that it is not a problem peculiar to my environment.%%%

%%%I'm sorry. There was an old custom called "OBON" in Japan and was absent for these past three days. There is a thing to get to me just to have understood that it is not a problem peculiar to my environment.%%%
Author

%%%This occurs by the rendering of the animation of opengl.%%%

%%%This occurs by the rendering of the animation of opengl.%%%
Member

%%%Miika: could you check on this?%%%

%%%Miika: could you check on this?%%%

%%%Seems like domain object has incorrect inverse matrix during the first render. So I suppose not everything gets properly updated between renders.%%%

%%%Seems like domain object has incorrect inverse matrix during the first render. So I suppose not everything gets properly updated between renders.%%%

%%%Fix in svn revision 59446, thanks for the report.%%%

%%%Fix in svn revision 59446, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36441
No description provided.