Fix #36441: opengl render of smoke wrong after regular render with blender internal. Object.imat isn't always the inverse of Object.obmat, needs to be set before usage as mentioned in DNA_object_types.h.

Thanks to Miika for tracking down the cause of this bug.